\name{NEWS}
\title{brms News}
\encoding{UTF-8}

\section{CHANGES IN VERSION 0.9.0.9000}{
  \subsection{OTHER CHANGES}{
    \itemize{ 
      \item Add horizontal lines to the errorbars in 
      \code{marginal_effects} plots for factors.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix a bug that could lead to a cryptic error
      message when changing some parts of the model 
      \code{formula} using the \code{update} method.
      \item Allow interactions of numeric and categorical
      predictors in \code{marginal_effects} to be passed 
      to the \code{effects} argument in any order.
    }
  }
}

\section{CHANGES IN VERSION 0.9.0}{
  \subsection{NEW FEATURES}{
    \itemize{ 
      \item Add support for \code{monotonous} effects
      allowing to use ordinal predictors without 
      assuming their categories to be equidistant.
      \item Apply multivariate formula syntax in categorical 
      models to considerably increase modeling flexibility. 
      \item Add the addition argument \code{disp} to define 
      multiplicative factors on dispersion parameters. 
      For linear models, \code{disp} applies to the residual
      standard deviation \code{sigma} so that it can be
      used to weight observations.
      \item Treat the fixed effects design matrix as sparse
      by using the \code{sparse} argument of \code{brm}. 
      This can considerably reduce working memory 
      requirements if the predictors contain many zeros.
      \item Add the \code{cor_fixed} correlation structure to
      allow for fixed user-defined covariance matrices of the 
      response variable.
      \item Allow to pass self-defined \pkg{Stan} functions
      via argument \code{stan_funs} of \code{brm}. 
      \item Add the \code{expose_functions} method allowing to
      expose self-defined \pkg{Stan} functions in \code{R}.
      \item Extend the functionality of the \code{update} 
      method to allow all model parts to be updated.